--- a/src/App.scss
+++ b/src/App.scss
@@ -156,6 +156,47 @@ header {
     max-width: 922px;
     margin: auto; // center element horizontally within container
     height: 44px;
+
+    p, li {
+      color: white;
+    }
+
+    div {
+      &.logo { // div with classname logo
+        padding-left: 8px;
+        grid-area: 1/1; // grid-row-start and end / grid-col-start and end
+
+        img {
+          width: 24px;
+        }
+      }
+
+      &.settings {
+        grid-area: 1/2;
+        text-align: right;
+
+        ul {
+          float: right;
+
+          li {
+            @include va; // what does this do?
+
+            list-style-type: none;
+            cursor: pointer;
+            width: 30px;
+            height: 30px;
+            text-align: center;
+            vertical-align: middle;
+            float: left;
+
+            &:hover {
+              border-radius: 3px;
+              background-color: rgba(255,255,255,0.2);
+            }
+          }
+        }
+      }
+    }
   }
 }
 
