--- a/src/App.scss
+++ b/src/App.scss
@@ -454,7 +454,7 @@ header {
  ========================== */
 .add-task {
   &__overlay {
-    background: rbga(102, 102, 102, 0.5);
+    background: rgba(102, 102, 102, 0.5);
     position: absolute;
     margin: auto;
     top: 0;
