added aria labels

--- a/src/App.scss
+++ b/src/App.scss
@@ -95,6 +95,12 @@ $generic-bg: #db4c3f;
   margin: 2px 5px;
 }
 
+@mixin transparent-button() {
+  background-color: transparent;
+  border: 0;
+}
+
+
 @mixin task-item() {
   list-style-type: none; // The marker for each list element
   display: flex;
@@ -197,11 +203,26 @@ header {
             &.settings__add {
               margin-right: 15px;
               font-size: 30px;
+
+              button {
+                @include transparent-button();
+                color: white;
+                cursor: pointer;
+              }
             }
 
-            &.settings__dark-mode svg {
-              width: 20px;
-              height: 20px;
+            &.settings__darkmode {
+              button {
+                @include transparent-button();
+                color: white;
+                cursor: pointer;
+                display: flex;
+              }
+
+              svg {
+                width: 20px;
+                height: 20px;
+              }
             }
           }
         }
@@ -228,19 +249,18 @@ header {
   }
 
   li {
-    padding-left: 10px;
-    padding-right: 15px;
-
     &:hover .sidebar__project-delete {
       display: flex;
     }
   }
 
   &__project { // needs to be fixed to projects since class is sidebar__projects
-    padding: 5px 0;
     cursor: pointer;
 
     div:nth-child(1) {
+      padding: 5px 0;
+      padding-left: 10px;
+      padding-right: 15px;
       width: 100%;
       display: flex;
       align-items: center;
@@ -328,23 +348,33 @@ header {
 
   &__generic {
     li {
-      padding: 10px 0 10px 10px;
       list-style-type: none;
       color: #333;
       display: flex;
       cursor: pointer;
       line-height: 1.50;
       font-size: 15px;
+      padding-left: 0;
+      padding-right: 0;
 
-      span:first-of-type {
-        margin-right: 10px;
+      div:nth-child(1) {
+        display: flex;
+        padding: 10px 0 10px 10px;
+        width: 100%;
 
-        svg {
-          width: 18px;
-          height: 18px;
-          color: #555;
+        span:first-of-type {
+          margin-right: 10px;
+          display: flex;
+          align-items: center;
+
+          svg {
+            width: 18px;
+            height: 18px;
+            color: #555;
+          }
         }
       }
+
 
       &.active, &:hover {
         font-weight: bold;
@@ -566,14 +596,23 @@ header {
 
   &__list li {
     @include task-item();
+    padding: 0;
 
-    span:first-of-type {
-      margin-right: 10px;
+    div:nth-child(1) {
+      padding: 10px;
+      width: 100%;
+      display: flex;
+      align-items: center;
 
-      svg {
-        fill: grey;
+      span:first-of-type {
+        margin-right: 10px;
+
+        svg {
+          fill: grey;
+        }
       }
     }
+
   }
 }
 
@@ -585,6 +624,12 @@ header {
 
   &__list li {
     @include task-item();
+    padding: 0;
+
+    div:nth-child(1) {
+      width: 100%;
+      padding: 10px;
+    }
   }
 }
 
